Finish section three CSS and fix wraping issues in section one and two

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .container {
@@ -62,6 +62,7 @@ ul {
     display: flex;
     flex-direction: column;
     width: 500px;
+    flex-shrink: 0;
     /* margin: 32px; */
 }
 
@@ -100,15 +101,16 @@ li {
 
 .three {
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     flex-direction: column;
     text-align: center;
     align-items: center;
     height: 400px;
+    background-color: #E5E7EB;
 }
 
-.info {
-    /* justify-content: center; */
+.infotext {
+    color: #5b5c5e;
 }
 
 .s2{
@@ -121,26 +123,38 @@ li {
 }
 
 .s2title {
-    margin: 48px 0px 96px;
+    margin: 40px 0px 40px;
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
 }
 
 .infoimg {
-    width: 100px;
-    height: 100px;
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+}
+
+.infoimg,
+.infotext {
+    width: 150px;
+    height: 150px;
 }
 
 .quote,
 .quote2 {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 800px;
+    color: #1f2937;
 }
 
 .quote {
+    /* font-weight: 100; */
     font-size: 36px;
     font-style: italic;
-    color: #1f2937;
+    text-align: left;
+}
+
+.quote2 {
+    font-weight: bolder;
+    justify-content: flex-end;
 }
